src/snapshots/typst_geshihua__util__tests__pretty_items-2.snap
---
source: src/util.rs
expression: outer.pretty(10).to_string()
---
[
  123,
  12345,
  1234,
  1234567,
]
