src/snapshots/typst_geshihua__util__tests__pretty_items.snap
---
source: src/util.rs
expression: outer
---
[
    "[",
    Group(
        FlatAlt(
            Nest(
                2,
                [
                    Line,
                    "123",
                    ",",
                    Hardline,
                    "12345",
                    ",",
                    Hardline,
                    "1234",
                    ",",
                    Hardline,
                    "1234567",
                    ",",
                    Hardline,
                ],
            ),
            [
                "123",
                ",",
                " ",
                "12345",
                ",",
                " ",
                "1234",
                ",",
                " ",
                "1234567",
            ],
        ),
    ),
    "]",
]
