src/snapshots/typst_geshihua__util__tests__pretty_items_single.snap
---
source: src/util.rs
expression: outer
---
[
    "{",
    " ",
    "let a = 1;",
    " ",
    "}",
]
